added azure update for auth

--- a/ClientDataAPI/appsettings.json
+++ b/ClientDataAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AzureAdB2C": {
+    "Instance": "https://<your-tenant>.b2clogin.com/",
+    "Domain": "<your-tenant>.onmicrosoft.com",
+    "ClientId": "<API_CLIENT_ID>",
+    "TenantId": "<TENANT_ID>",
+    "SignUpSignInPolicyId": "B2C_1_SignInSignUp"
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=<SQL_SERVER>;Database=ClientData;User Id=<USER>;Password=<PASSWORD>;"
+  }
 }
